[package]
name = "tagged"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
anyhow = "1.0"
futures = "0.3"
#chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"
