[package]
name = "tagged"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = "0.9"
log = "0.4"
rmp-serde = "0.15"
futures = "0.3"
#chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"
